Fix overflow-x on body

--- a/site/src/App.css
+++ b/site/src/App.css
@@ -2,6 +2,10 @@ a {
     text-decoration: none;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 button {
     border: none;
 }
